# AgentGuard-Zero

./: .gitignore  CITATION.cff  FRAMEWORK_LOCK.md  MODIFICATION_MAP.md  README.md  README_AGENTGUARD_ZERO.md  SUBMIT_VDA_WARMUP.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-training.txt  requirements.txt
agentguard_zero/: __init__.py  inference_contract.py  json_stopping.py  protocol.py  runtime_policy.py  variants.py
configs/: environment.example
docs/: ACTION_SUPPORT_RECOVERY.md  AGZ_HANDOFF_20260709.md  API_SELECT_OPTIMIZATION_20260707.md  CANDIDATE_COEVOLUTION_MIN3.md  DCA_FIRST_COEVOLUTION.md  DCA_FIRST_COEVOLUTION_20260710.md  FRAMEWORK_SELECT.md  QWEN35_DEPLOYMENT_20260708.md  RECOVERY_FIXED500_COMPACT_INTENT.md  SELECT_V5C.md  TMCD_EXPERIMENT_RUNBOOK_20260708.md
scripts/: agent0_gpu_preflight.py  agent0_preflight.py  agentguard_env.sh  agentguard_hydra_config_smoke.py  agentguard_import_preflight.py  agentguard_reward_routing_smoke.py  agentguard_vda_reward_smoke.py  aggregate_recovery_training_data.py  archive_lora_and_prune_full_checkpoints.py  audit_candidate_dataset.py  audit_candidate_learnability.py  audit_dca_first_lineage.py  audit_micro_coevolution_eval.py  audit_tmcd_v2_release.py  benchmark_9b_dca_batch20_n4_node217_dsub.sh  benchmark_9b_dca_batch32_node217_dsub.sh  benchmark_dca_fastpath_step_node217_dsub.sh  benchmark_qwen35_causal_conv1d_node217_dsub.sh  benchmark_qwen35_fast_generation.py  benchmark_vda_action_budget.py  build_and_benchmark_causal_conv1d_node217_dsub.sh  build_cage_style_level2.py  build_candidate_dataset.py  (+117 more)
(+226 files in other folders)
